# Language

./: CMakeLists.txt  Makefile  README.md  asm.asm  asm.txt  code.txt  codegen.h  config.h  keywords.h  log.txt  main.cpp  operators.h
Code/: code.txt
Compiler/: asm_generate.cpp  compiler.cpp  compiler.h  compiler_main.cpp
Debug/: debug.cpp  debug.h
List/: list.h
List/Functions/: indexes.cpp  insertion.cpp  otheropers.cpp  pointers.cpp
List/Struct/: list.cpp
Reader/: reader.cpp  reader.h
TextToTokens/: analyzer.cpp  analyzer.h
Tokens/: debug.cpp  token_stk.cpp  tokens.cpp  tokens.h  tokens_debug.h
Tree/: debug.cpp  tree.cpp  tree.h  tree_debug.h
